# django-quanttide-hr

./: .gitignore  README.md  pyproject.toml
django_quanttide_hr/: apps.py
django_quanttide_hr/models/: __init__.py  duty.py  employee.py  group.py
docs/: README.md
example/: manage.py  requirements.txt
example/duties/: models.py
example/duties/migrations/: 0001_initial.py
example/example/: settings.py
example/ra/: apps.py  models.py
example/ra/migrations/: 0001_initial.py
tests/: models.py  settings.py  test_apps.py  test_models_employee.py
