[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# name it as your package name
name = "django-quanttide-hr"
# semetric versions
version = "0.1.0-alpha.1"
# describe the package within one sentence
description = "量潮人力资源Django工具包"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.0"
djangorestframework = ">=3.0"
django-quanttide = {git = "https://github.com/quanttide/django-quanttide.git"}

